fix about spacing

--- a/src/styles/components/_skills.scss
+++ b/src/styles/components/_skills.scss
@@ -1,12 +1,8 @@
 .skills__container {
   @include flex(column, flex-start, center);
-  margin: $l-size 0;
+  margin-top: $l-size;
   width: 100%;
   max-width: 70rem;
-
-  // @media (min-width: $large) {
-  //   width: 70rem;
-  // }
 
   .skills__list {
     width: 90%;
